--- a/client/index.html
+++ b/client/index.html
@@ -1,65 +1,19 @@
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<base href="/">
-    <style>
-        .fadein.ng-enter {
-            -webkit-transition: 1s;
-            transition: 1s;
-            opacity: 0;
-        }
-        .fadein.ng-enter.ng-enter-active {
-            opacity: 1;
-        }
-        .inline-fadein.ng-hide-remove {
-            -webkit-transition: 500ms ease all;
-            -moz-transition: 500ms ease all;
-            -o-transition: 500ms ease all;
-            transition: 500ms ease all;
-            display: inline-block !important;
-            opacity: 0;
-        }
-        .inline-fadein.ng-hide-remove.ng-hide-remove-active {
-            opacity: 1;
-        }
-        @-webkit-keyframes webkit-spin {
-            from {
-                -webkit-transform: scale(1) rotate(0deg);
-            }
-            to {
-                -webkit-transform: scale(1) rotate(359deg);
-            }
-        }
-        @keyframes spin {
-            from {
-                transform: rotate(0deg);
-            }
-            to {
-                transform: rotate(360deg);
-            }
-        }
-        .loading-icon {
-            -ms-animation: spin .7s infinite linear;
-            -moz-animation: spin .7s infinite linear;
-            -webkit-animation: webkit-spin .7s infinite linear;
-            top: 2px;
-            margin-left: 7px;
-        }
-        .alert {
-            background: red;
-            margin-top: 15px;
-        }
-    </style>
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <base href="/">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body layout="row" ng-app="cv" ng-strict-di="">
 <resolve-loader></resolve-loader>
 <md-content layout="column" class="relative" layout-fill role="main">
     <md-content>
         <md-content layout="row" layout-xs="column" layout-align="center stretch" class="bg-color">
-            <md-content ui-view="sidebar" flex flex-sm="45" flex-gt-sm="25" flex-md="35" flex-gt-lg="25" class="bg-color"></md-content>
-            <md-content ui-view="content" flex flex-sm="55" flex-gt-sm="45" flex-md="55" class="bg-color right-side"></md-content>
+            <md-content ui-view="sidebar" flex flex-sm="45" flex-gt-sm="25" flex-md="35" flex-gt-lg="25"
+                        class="bg-color"></md-content>
+            <md-content ui-view="content" flex flex-sm="55" flex-gt-sm="45" flex-md="55"
+                        class="bg-color right-side"></md-content>
         </md-content>
     </md-content>
 </md-content>
- 
+
 </body>
