--- a/client/index.html
+++ b/client/index.html
@@ -6,13 +6,8 @@
 <body layout="row" ng-app="cv" ng-strict-di="">
 <resolve-loader></resolve-loader>
 <md-content layout="column" class="relative" layout-fill role="main">
-    <md-content>
-        <md-content layout="row" layout-xs="column" layout-align="center stretch" class="bg-color">
-            <md-content ui-view="sidebar" flex flex-sm="45" flex-gt-sm="25" flex-md="35" flex-gt-lg="25"
-                        class="bg-color"></md-content>
-            <md-content ui-view="content" flex flex-sm="55" flex-gt-sm="45" flex-md="55"
-                        class="bg-color right-side"></md-content>
-        </md-content>
+    <md-content ui-view>
+
     </md-content>
 </md-content>
 
