refactoring in routes fix some links

--- a/client/cv/profile/profile.html
+++ b/client/cv/profile/profile.html
@@ -8,7 +8,7 @@
             <md-content flex>
                 <h2>Work Experience</h2>
                 <md-button class="md-fab md-fab-bottom-right" aria-label="Download" hide-xs>
-                    <a href="assets/albert_cv_en.pdf" download>
+                    <a href="assets/albert_cv_en.pdf" target="_blank">
                     <i class="material-icons material-icon-color" style="margin-top: 15px">file_download</i>
                     <md-tooltip md-direction="top">
                         Download
