--- a/client/cv/coverletter/coverletter.html
+++ b/client/cv/coverletter/coverletter.html
@@ -4,8 +4,8 @@
                     <h2 class="md-headline">{{letter.coverLetter.title}}</h2>
                     <span class="md-subhead">{{letter.coverLetter.subtitle}}</span>
                 </md-card-title-text>
-                <md-button class="md-fab md-fab-bottom-right" aria-label="Download" hide-xs>
-                    <a href="assets/motivation_letter.pdf" download>
+                <md-button class="md-fab md-fab-bottom-right" aria-label="Download" hide-xs ng-if="letter.fileUrl">
+                    <a ng-href="{{letter.fileUrl}}" target="_blank">
                         <i class="material-icons material-icon-color" style="margin-top: 15px">file_download</i>
                         <md-tooltip md-direction="bottom">
                             Download
