--- a/client/cv/sidebar/sidebar.html
+++ b/client/cv/sidebar/sidebar.html
@@ -1,6 +1,6 @@
 <md-card flex>
         <md-content class="profile-img">
-            <a ui-sref="cv">
+            <a ui-sref="profile.cv">
                 <img src="images/profile.jpg" alt="{{sidebar.getFullName}}">
                 <div class="title">
                     <h2>{{sidebar.getFullName}}</h2> <!-- title name -->
