--- a/client/cv/sidebar/sidebar.html
+++ b/client/cv/sidebar/sidebar.html
@@ -59,6 +59,22 @@
                 </md-list-item>
 
                 <md-list-item class="md-3-line">
+                    <i class="md-avatar">
+                        <img src="http://kaworu.github.io/octostrap3/images/GitHub-Mark.png" alt="github logo" width="25px" height="25px"/>
+                        <md-tooltip md-direction="top">
+                            Github
+                        </md-tooltip>
+                    </i>
+                    <div class="md-list-item-text">
+                        <div class="contact-info">
+                            <h4><a href="https://github.com/albert5287" target="_blank">albert5287</a></h4> <!-- Github -->
+                            <span>Github account</span>
+                        </div>
+                    </div>
+                    <md-divider md-inset></md-divider>
+                </md-list-item>
+
+                <md-list-item class="md-3-line">
                     <i class="material-icons md-avatar material-icon-color">
                         home
                         <md-tooltip md-direction="top">
