--- a/client/index.html
+++ b/client/index.html
@@ -7,14 +7,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.0.7/angular-material.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body layout="row" ng-app="resume" ng-strict-di="">
+<body ng-app="resume" ng-strict-di="">
 
-<!--<cv></cv>-->
-<resolve-loader></resolve-loader>
-<md-content layout="column" class="relative" layout-fill role="main">
-    <md-content ui-view>
 
-    </md-content>
-</md-content>
+<cv></cv>
 
 </body>
